Document missing urls and discussion papers.

--- a/documents/paper.tex
+++ b/documents/paper.tex
@@ -62,4 +62,16 @@
 
 \clearpage
 
+There are 6 digits in the current range without a corresponding discussion paper accessible.
+The numbers are (4953, 12119, 12315, 12577, 12664, 16580).
+The first discussion paper would have been from May 2010.
+The later five ones fall into the time span January 2019 to November 2023.
+
+There are 9 discussion paper entries without a corresponding discussion paper file accessible.
+The numbers are (9, 18, 21, 28, 33, 56, 173, 16801, 17143).
+The first nine fall into the range June 1998 to July 2000.
+The later two are from February and July 2024.
+
+\clearpage
+
 \end{document}
