Update to pixi environment.

--- a/documents/paper.tex
+++ b/documents/paper.tex
@@ -72,6 +72,8 @@ The numbers are (9, 18, 21, 28, 33, 56, 173, 16801, 17143).
 The first nine fall into the range June 1998 to July 2000.
 The later two are from February and July 2024.
 
+These 15 entries are excluded from the analysis.
+
 \clearpage
 
 \end{document}
