Initial commit of analysis.

--- a/documents/paper.tex
+++ b/documents/paper.tex
@@ -74,6 +74,8 @@ The later two are from February and July 2024.
 
 These 15 entries are excluded from the analysis.
 
+Dropped 18 entries, that have been superseded by another discussion paper.
+
 \clearpage
 
 \end{document}
