Clean JEL codes for further analysis.

--- a/documents/paper.tex
+++ b/documents/paper.tex
@@ -62,6 +62,12 @@
 
 \clearpage
 
+\section{Introduction}
+
+\section{Data}
+
+\subsection{Data Collection and Cleaning}
+
 There are 6 digits in the current range without a corresponding discussion paper accessible.
 The numbers are (4953, 12119, 12315, 12577, 12664, 16580).
 The first discussion paper would have been from May 2010.
@@ -75,6 +81,12 @@ The later two are from February and July 2024.
 These 15 entries are excluded from the analysis.
 
 Dropped 18 entries, that have been superseded by another discussion paper.
+
+Dropped one discussion paper each with the JEL Codes "workfromhomecommutetimesallocationoftimesavingsCOVID19" (15870), and
+"labordisplacementenergytransitioncoalmines" (15581).
+Dropped 16 discussion papers due to completely missing JEL Codes, these were from March 2024 to February 2025.
+There were about 45 discussion papers that needed manual attention to fix the extracted JEL Codes.
+Likely the JEL Codes were extracted on IZA side via Optical Character Recognition (OCR) from the PDFs, leading to confusions of e.g. "I" and "1" or "O" and "0".
 
 \clearpage
 
