Data analysis preparation and initital plot.

--- a/documents/paper.tex
+++ b/documents/paper.tex
@@ -88,6 +88,16 @@ Dropped 16 discussion papers due to completely missing JEL Codes, these were fro
 There were about 45 discussion papers that needed manual attention to fix the extracted JEL Codes.
 Likely the JEL Codes were extracted on IZA side via Optical Character Recognition (OCR) from the PDFs, leading to confusions of e.g. "I" and "1" or "O" and "0".
 
+\subsection{Data Collection and Cleaning}
+For the analysis only data between January 2000 and December 2024 was selected.
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.5\textwidth]{../bld/figures/fig_counts_avg_jel_codes}
+    \caption{Discussion Papers \& Avg. JEL Codes per Paper Over Time}
+    \label{fig:monthly_counts_and_avg_jel_codes_per_paper}
+\end{figure}
+
 \clearpage
 
 \end{document}
