Renaming and refactoring of structure.

--- a/documents/paper.tex
+++ b/documents/paper.tex
@@ -43,13 +43,13 @@
 
 \begin{document}
 
-\title{Reproduction and Expansion of \\"SPECIALIZATION TRENDS IN ECONOMICS RESEARCH" by Sebastian Galiani, Ramiro H. Gálvez, and Ian Nachman}
+\title{Research Proposal: Specialization Trends in Economics Research using JEL Codes \\
+Text Data in Economics by Aapo Stenhammar \\
+University of Bonn, Winter Term 2024/25}
 
-\author{Felix Schmitz}
+\author{Felix Schmitz\footnotemark[1]}
 
 \date{
-    {\bf Under construction}
-    \\[1ex]
     \today
 }
 
@@ -90,10 +90,12 @@ Likely the JEL Codes were extracted on IZA side via Optical Character Recognitio
 
 \subsection{Data Collection and Cleaning}
 For the analysis only data between January 2000 and December 2024 was selected.
+This is mainly to ensure a sufficient number of observations per month (for the early years) and complete information on the discussion paper (for the most recent discussion papers).
+This reduces the sample size by 195 observations. The final number of discussion papers analysed is 17,449.
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.5\textwidth]{../bld/figures/fig_counts_avg_jel_codes}
+    \includegraphics[width=0.8\textwidth]{../bld/figures/fig_counts_avg_jel_codes}
     \caption{Discussion Papers \& Avg. JEL Codes per Paper Over Time}
     \label{fig:monthly_counts_and_avg_jel_codes_per_paper}
 \end{figure}
