Add author timeseries plots.

--- a/documents/paper.tex
+++ b/documents/paper.tex
@@ -100,6 +100,20 @@ This reduces the sample size by 195 observations. The final number of discussion
     \label{fig:monthly_counts_and_avg_jel_codes_per_paper}
 \end{figure}
 
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{../bld/figures/fig_author_trends}
+    \caption{Average Number of Authors Over Time}
+    \label{fig:author_trends}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{../bld/figures/fig_dp_counts}
+    \caption{Number of Authors \& JEL Codes per Discussion Paper}
+    \label{fig:dp_counts}
+\end{figure}
+
 \clearpage
 
 \end{document}
