--- a/documents/refs.bib
+++ b/documents/refs.bib
@@ -2,85 +2,117 @@
   title = {Economic {{Research Evolves}}: {{Fields}} and {{Styles}}},
   shorttitle = {Economic {{Research Evolves}}},
   author = {Angrist, Joshua and Azoulay, Pierre and Ellison, Glenn and Hill, Ryan and Lu, Susan Feng},
-  year = {2017},
-  month = may,
-  journal = {American Economic Review},
+  date = {2017-05-01},
+  journaltitle = {American Economic Review},
+  shortjournal = {American Economic Review},
   volume = {107},
   number = {5},
   pages = {293--297},
   issn = {0002-8282},
   doi = {10.1257/aer.p20171117},
+  url = {https://pubs.aeaweb.org/doi/10.1257/aer.p20171117},
   urldate = {2024-11-09},
   abstract = {We examine the evolution of economics research using a machine-learning-based classification of publications into fields and styles. The changing field distribution of publications would not seem to favor empirical papers. But economics' empirical shift is a within-field phenomenon; even fields that traditionally emphasize theory have gotten more empirical. Empirical work has also come to be more cited than theoretical work. The citation shift is sharpened when citations are weighted by journal importance. Regression analyses of citations per paper show empirical publications reaching citation parity with theoretical publications around 2000. Within fields and journals, however, empirical work is now cited more.},
   langid = {english},
   file = {/Users/felixschmitz/Zotero/storage/VNZIFFA9/Angrist et al. - 2017 - Economic Research Evolves Fields and Styles.pdf}
 }
 
-@misc{galiani2023a,
-  type = {Working {{Paper}}},
+@article{blei2003,
+  title = {Latent Dirichlet Allocation},
+  author = {Blei, David M. and Ng, Andrew Y. and Jordan, Michael I.},
+  date = {2003-03-01},
+  journaltitle = {J. Mach. Learn. Res.},
+  volume = {3},
+  pages = {993--1022},
+  issn = {1532-4435},
+  abstract = {We describe latent Dirichlet allocation (LDA), a generative probabilistic model for collections of discrete data such as text corpora. LDA is a three-level hierarchical Bayesian model, in which each item of a collection is modeled as a finite mixture over an underlying set of topics. Each topic is, in turn, modeled as an infinite mixture over an underlying set of topic probabilities. In the context of text modeling, the topic probabilities provide an explicit representation of a document. We present efficient approximate inference techniques based on variational methods and an EM algorithm for empirical Bayes parameter estimation. We report results in document modeling, text classification, and collaborative filtering, comparing to a mixture of unigrams model and the probabilistic LSI model.},
+  issue = {null},
+  file = {/Users/felixschmitz/Zotero/storage/ZC2IJJPX/Blei et al. - 2003 - Latent dirichlet allocation.pdf}
+}
+
+@online{galiani2023a,
+  type = {Working Paper},
   title = {Specialization {{Trends}} in {{Economics Research}}: {{A Large-Scale Study Using Natural Language Processing}} and {{Citation Analysis}}},
   shorttitle = {Specialization {{Trends}} in {{Economics Research}}},
-  author = {Galiani, Sebastian and G{\'a}lvez, Ramiro H. and Nachman, Ian},
-  year = {2023},
-  month = jun,
+  author = {Galiani, Sebastian and Gálvez, Ramiro H. and Nachman, Ian},
+  date = {2023-06},
   series = {Working {{Paper Series}}},
   number = {31295},
   eprint = {31295},
-  publisher = {National Bureau of Economic Research},
+  eprinttype = {National Bureau of Economic Research},
   doi = {10.3386/w31295},
+  url = {https://www.nber.org/papers/w31295},
   urldate = {2025-01-21},
   abstract = {This article conducts a comprehensive analysis of specialization trends within and across fields of economics research. We collect data on 24,273 articles published between 1970 and 2016 in general research economics outlets and employ machine learning techniques to enrich the collected data. Results indicate that theory and econometric methods papers are becoming increasingly specialized, with a narrowing scope and steady or declining citations from outside economics and from other fields of economics research. Conversely, applied papers are covering a broader range of topics, receiving more extramural citations from fields like medicine, and psychology. Trends in applied theory articles are unclear.},
-  archiveprefix = {National Bureau of Economic Research},
+  pubstate = {prepublished},
   file = {/Users/felixschmitz/Zotero/storage/BSL8LB5M/Galiani et al. - 2023 - Specialization Trends in Economics Research A Lar.pdf}
 }
 
 @article{heikkila2022,
   title = {Journal of {{Economic Literature Codes Classification System}} ({{JEL}})},
-  author = {Heikkil{\"a}, Jussi T. S.},
-  year = {2022},
-  journal = {KNOWLEDGE ORGANIZATION},
+  author = {Heikkilä, Jussi T. S.},
+  date = {2022},
+  journaltitle = {KNOWLEDGE ORGANIZATION},
+  shortjournal = {KO},
   volume = {49},
   number = {5},
   pages = {352--370},
   issn = {0943-7444},
   doi = {10.5771/0943-7444-2022-5-352},
+  url = {https://www.nomos-elibrary.de/index.php?doi=10.5771/0943-7444-2022-5-352},
   urldate = {2025-01-21},
   abstract = {The Journal of Economic Literature codes classification system (JEL) published by the American Economic Association (AEA) is the de facto standard classification system for research literature in economics. The JEL classification system is used to classify articles, dissertations, books, book reviews, and working papers in EconLit, a database maintained by the AEA. Over time, it has evolved and extended to a system with over 850 subclasses. This paper reviews the history and development of the JEL classification system, describes the current version, and provides a selective overview of its uses and applications in research. The JEL codes classification system has been adopted by several publishers, and their instructions are reviewed. There are interesting avenues for future research as the JEL classification system has been surprisingly little used in existing bibliometric and scientometric research as well as in library classification systems.},
   langid = {english},
   file = {/Users/felixschmitz/Zotero/storage/C7NL98I4/Heikkilä - 2022 - Journal of Economic Literature Codes Classificatio.pdf}
 }
 
+@online{heikkila2022a,
+  title = {Journal of {{Economic Literature}} Codes Classification System ({{JEL}})},
+  author = {Heikkila, Jussi T. S.},
+  date = {2022-07-13},
+  eprint = {2207.06076},
+  eprinttype = {arXiv},
+  eprintclass = {econ},
+  doi = {10.48550/arXiv.2207.06076},
+  url = {http://arxiv.org/abs/2207.06076},
+  urldate = {2025-02-26},
+  abstract = {The Journal of Economic Literature codes classification system (JEL) published by the American Economic Association (AEA) is the de facto standard classification system for research literature in economics. The JEL classification system is used to classify articles, dissertations, books, book reviews, and working papers in EconLit, a database maintained by the AEA. Over time, it has evolved and extended to a system with over 850 subclasses. This paper reviews the history and development of the JEL classification system, describes the current version, and provides a selective overview of its uses and applications in research. The JEL codes classification system has been adopted by several publishers, and their instructions are reviewed. There are interesting avenues for future research as the JEL classification system has been surprisingly little used in existing bibliometric and scientometric research as well as in library classification systems.},
+  pubstate = {prepublished},
+  keywords = {Economics - General Economics,Quantitative Finance - Economics},
+  file = {/Users/felixschmitz/Zotero/storage/PAP92V9T/Heikkila - 2022 - Journal of Economic Literature codes classificatio.pdf;/Users/felixschmitz/Zotero/storage/EWUBCC3G/2207.html}
+}
+
 @article{heikkila2024,
   title = {Human Intelligence versus Artificial Intelligence in Classifying Economics Research Articles: Exploratory Evidence},
   shorttitle = {Human Intelligence versus Artificial Intelligence in Classifying Economics Research Articles},
-  author = {Heikkil{\"a}, Jussi T.S.},
-  year = {2024},
-  month = dec,
-  journal = {Journal of Documentation},
+  author = {Heikkilä, Jussi T.S.},
+  date = {2024-12-16},
+  journaltitle = {Journal of Documentation},
+  shortjournal = {JD},
   volume = {81},
   number = {7},
   pages = {18--30},
   issn = {0022-0418, 1758-7379},
   doi = {10.1108/JD-05-2024-0104},
+  url = {https://www.emerald.com/insight/content/doi/10.1108/JD-05-2024-0104/full/html},
   urldate = {2025-01-21},
-  abstract = {Purpose               We compare human intelligence to artificial intelligence (AI) in the choice of appropriate Journal of Economic Literature (JEL) codes for research papers in economics.                                         Design/methodology/approach                                We compare the JEL code choices related to articles published in the recent issues of the                 Journal of Economic Literature                 and the                 American Economic Review                 and compare these to the original JEL code choices of the authors in earlier working paper versions and JEL codes recommended by various generative AI systems (OpenAI's ChatGPT, Microsoft's Copilot, Google's Gemini) based on the abstracts of the articles.                                                        Findings               There are significant discrepancies and often limited overlap between authors' choices of JEL codes, editors' choices as well as the choices by contemporary widely used AI systems. However, the observations suggest that generative AI can augment human intelligence in the micro-task of choosing the JEL codes and, thus, save researchers time.                                         Research limitations/implications               Rapid development of AI systems makes the findings quickly obsolete.                                         Practical implications               AI systems may economize on classification costs and (semi-)automate the choice of JEL codes by recommending the most appropriate ones. Future studies may apply the presented approach to analyze whether the JEL code choices between authors, editors and AI systems converge and become more consistent as humans increasingly interact with AI systems.                                         Originality/value               We assume that the choice of JEL codes is a micro-task in which boundedly rational decision-makers rather satisfice than optimize. This exploratory experiment is among the first to compare human intelligence and generative AI in choosing and justifying the choice of optimal JEL codes.},
-  copyright = {https://www.emerald.com/insight/site-policies},
+  abstract = {Purpose               We compare human intelligence to artificial intelligence (AI) in the choice of appropriate Journal of Economic Literature (JEL) codes for research papers in economics.                                         Design/methodology/approach                                We compare the JEL code choices related to articles published in the recent issues of the                 Journal of Economic Literature                 and the                 American Economic Review                 and compare these to the original JEL code choices of the authors in earlier working paper versions and JEL codes recommended by various generative AI systems (OpenAI’s ChatGPT, Microsoft’s Copilot, Google’s Gemini) based on the abstracts of the articles.                                                        Findings               There are significant discrepancies and often limited overlap between authors’ choices of JEL codes, editors’ choices as well as the choices by contemporary widely used AI systems. However, the observations suggest that generative AI can augment human intelligence in the micro-task of choosing the JEL codes and, thus, save researchers time.                                         Research limitations/implications               Rapid development of AI systems makes the findings quickly obsolete.                                         Practical implications               AI systems may economize on classification costs and (semi-)automate the choice of JEL codes by recommending the most appropriate ones. Future studies may apply the presented approach to analyze whether the JEL code choices between authors, editors and AI systems converge and become more consistent as humans increasingly interact with AI systems.                                         Originality/value               We assume that the choice of JEL codes is a micro-task in which boundedly rational decision-makers rather satisfice than optimize. This exploratory experiment is among the first to compare human intelligence and generative AI in choosing and justifying the choice of optimal JEL codes.},
   langid = {english}
 }
 
 @article{kelly2011,
-  title = {Trend of {{Subjects Published}} in {{Economics Journals}} 1969--2007},
+  title = {Trend of {{Subjects Published}} in {{Economics Journals}} 1969–2007},
   author = {Kelly, Michael A. and Bruestle, Stephen},
-  year = {2011},
-  journal = {Economic Inquiry},
+  date = {2011},
+  journaltitle = {Economic Inquiry},
   volume = {49},
   number = {3},
   pages = {658--673},
   issn = {1465-7295},
   doi = {10.1111/j.1465-7295.2010.00282.x},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1465-7295.2010.00282.x},
   urldate = {2025-01-21},
   abstract = {We describe the evolution of subject areas published in economics over four decades and calculate the percentage of articles published in each Journal of Economic Literature (JEL) subject category, with and without weighting by Eigenfactor.com's Article Influence (AI). Finance, Development, and Industrial Organization have seen their share of total articles rise over the past four decades while Microeconomics, Macroeconomics, and Labor have seen their share fall. We use JEL codes to define specialty journals and find that more specialty journals tend to increase the overall percentage share for that subject. This effect is ambiguous when re-weighted by AI. (JEL A11, A14)},
-  copyright = {{\copyright} 2010 Western Economic Association International},
   langid = {english},
   file = {/Users/felixschmitz/Zotero/storage/UKWQUL2Q/j.1465-7295.2010.00282.html}
 }
@@ -88,16 +120,17 @@
 @article{rath2016,
   title = {Trends in Economics Publications Represented by {{JEL}} Categories between 2007 and 2013},
   author = {Rath, Katharina and Wohlrabe, Klaus},
-  year = {2016},
-  month = jun,
-  journal = {Applied Economics Letters},
+  date = {2016-06-12},
+  journaltitle = {Applied Economics Letters},
+  shortjournal = {Applied Economics Letters},
   volume = {23},
   number = {9},
   pages = {660--663},
   issn = {1350-4851, 1466-4291},
   doi = {10.1080/13504851.2015.1095998},
+  url = {http://www.tandfonline.com/doi/full/10.1080/13504851.2015.1095998},
   urldate = {2025-01-21},
-  abstract = {This article updates Kelly and Bruestle (2011) by illustrating how publication trends in different subject categories in economics evolved from 2007 to 2013. Using data from RePEc we show that the largest increase in the relative share was for articles published in JEL category Q (``Agricultural and Natural Resource Economics, Environmental and Ecological Economics'') over this period. Furthermore, we provide evidence that the number of JEL categories per article increased over the last 25 years.},
+  abstract = {This article updates Kelly and Bruestle (2011) by illustrating how publication trends in different subject categories in economics evolved from 2007 to 2013. Using data from RePEc we show that the largest increase in the relative share was for articles published in JEL category Q (“Agricultural and Natural Resource Economics, Environmental and Ecological Economics”) over this period. Furthermore, we provide evidence that the number of JEL categories per article increased over the last 25 years.},
   langid = {english},
   file = {/Users/felixschmitz/Zotero/storage/YIN8AJR5/Rath and Wohlrabe - 2016 - Trends in economics publications represented by JE.pdf}
 }
