Adapt width of figure and remove comments from text_model task.

--- a/documents/paper.tex
+++ b/documents/paper.tex
@@ -158,7 +158,7 @@ The average number of JEL Codes per discussion paper on the other hand is rather
 
 \begin{figure}
     \centering
-    \includegraphics{../bld/figures/fig_dp_counts}
+    \includegraphics[width=\textwidth]{../bld/figures/fig_dp_counts}
     \caption{Number of Discussion Papers \& JEL Codes per Discussion Paper}
     \label{fig:dp_counts}
 \end{figure}
@@ -171,7 +171,7 @@ These trends are shown in Figure \ref{fig:author_trends}.
 
 \begin{figure}
     \centering
-    \includegraphics{../bld/figures/fig_author_trends}
+    \includegraphics[width=\textwidth]{../bld/figures/fig_author_trends}
     \caption{Average Number of Authors Over Time}
     \label{fig:author_trends}
 \end{figure}
@@ -233,7 +233,7 @@ In Figure \ref{fig:top5_increasing_decreasing_topics}, the top 5 topics increasi
 
 \begin{figure}
     \centering
-    \includegraphics{../bld/figures/fig_topic_trends}
+    \includegraphics[width=\textwidth]{../bld/figures/fig_topic_trends}
     \caption{Top 5 Topics Increasing (Left) and Decreasing (Right) in Presence}
     \label{fig:top5_increasing_decreasing_topics}
 \end{figure}
@@ -242,7 +242,7 @@ In Figure \ref{fig:top5_increasing_decreasing_topics}, the top 5 topics increasi
 
 \begin{figure}
     \centering
-    \includegraphics{../bld/figures/fig_top5overall_jel}
+    \includegraphics[width=\textwidth]{../bld/figures/fig_top5overall_jel}
     \caption{Top 5 JEL Codes}
     \label{fig:top5overall_jel}
 \end{figure}
@@ -254,7 +254,7 @@ While other JEL Codes like 'J16' (Economics of Gender, Non-labor Discrimination)
 
 \begin{figure}
     \centering
-    \includegraphics{../bld/figures/fig_top3yearly_jel}
+    \includegraphics[width=\textwidth]{../bld/figures/fig_top3yearly_jel}
     \caption{Top 3 JEL Codes yearly}
     \label{fig:top3yearly_jel}
 \end{figure}
@@ -280,7 +280,7 @@ The Figure \ref{fig:counts_dp_jel_codes} shows the distribution of discussion pa
 
 \begin{figure}
     \centering
-    \includegraphics{../bld/figures/fig_counts_dp_jel_codes}
+    \includegraphics[width=\textwidth]{../bld/figures/fig_counts_dp_jel_codes}
     \caption{Discussion Papers by Author \& Discussion Papers by JEL Codes}
     \label{fig:counts_dp_jel_codes}
 \end{figure}
